--- a/src/app/ui/employee-list/employee-list.component.html
+++ b/src/app/ui/employee-list/employee-list.component.html
@@ -1,6 +1,19 @@
-<h1>Employee list</h1>
-<ul *ngIf="data$ | async as data; else empty">
-  <li *ngFor="let employee of data">{{ employee.id }}: {{ employee.name }}</li>
-</ul>
+<table class="employee-list-table" *ngIf="data$ | async as data; else empty">
+  <caption><h1>Employee list</h1></caption>
+  <thead>
+    <tr>
+      <th>Id</th>
+      <th>Name</th>
+      <th>Email</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let employee of data">
+      <td>{{ employee.id }}</td>
+      <td>{{ employee.name }}</td>
+      <td>{{employee.email}}</td>
+    </tr>
+  </tbody>
+</table>
 
 <ng-template #empty> There is no data </ng-template>
