feat: exercise 4, added Person model, service refactor

--- a/src/app/ui/employees-faces/employees-faces.component.html
+++ b/src/app/ui/employees-faces/employees-faces.component.html
@@ -1,7 +1,7 @@
 <div *ngFor="let employee of data$ | async" class="employees-face-element">
   <img
-    [src]="employee.image"
-    [alt]="employee.image"
+    [src]="employee.img"
+    [alt]="employee.img"
     class="employees-face-image"
   />
   <br />
