--- a/src/app/ui/employee-list/employee-list.component.html
+++ b/src/app/ui/employee-list/employee-list.component.html
@@ -11,9 +11,9 @@
   </thead>
   <tbody>
     <tr *ngFor="let employee of data">
-      <td>{{ employee.id }}</td>
+      <td>{{ employee.personalNumber }}</td>
       <td>{{ employee.name }}</td>
-      <td>{{ employee.email }}</td>
+      <td>{{ employee.mail }}</td>
     </tr>
   </tbody>
 </table>
