feat: ex. 5, added Project model, service & component

--- a/src/app/ui/employee-list/employee-list.component.html
+++ b/src/app/ui/employee-list/employee-list.component.html
@@ -18,4 +18,4 @@
   </tbody>
 </table>
 
-<ng-template #empty> There is no data </ng-template>
+<ng-template #empty> There is no employee data </ng-template>
