--- a/src/app/ui/employee-form/employee-form.component.html
+++ b/src/app/ui/employee-form/employee-form.component.html
@@ -1,4 +1,7 @@
-<form [formGroup]="employeeForm" class="employee-form-main">
+<form
+  [formGroup]="employeeForm"
+  class="employee-form-main"
+  (ngSubmit)="onSubmit(employeeForm.value)">
   <input type="text" formControlName="name" placeholder="Name" />
   <input type="number" formControlName="age" placeholder="Age" />
   <input type="number" formControlName="salary" placeholder="Salary" />
