feat: FB2 (CRUD) ex.4, delete employee functionality

--- a/src/app/ui/employee-list/employee-list.component.html
+++ b/src/app/ui/employee-list/employee-list.component.html
@@ -7,6 +7,7 @@
       <th>Id</th>
       <th>Name</th>
       <th>Email</th>
+      <th>Options</th>
     </tr>
   </thead>
   <tbody>
@@ -14,6 +15,7 @@
       <td>{{ employee.personalNumber }}</td>
       <td>{{ employee.name }}</td>
       <td>{{ employee.mail }}</td>
+      <td><button (click)="remove(employee.personalNumber)">Remove</button></td>
     </tr>
   </tbody>
 </table>
