--- a/src/app/ui/employee-form/employee-form.component.html
+++ b/src/app/ui/employee-form/employee-form.component.html
@@ -1,15 +1,25 @@
-<form
-  [formGroup]="employeeForm"
-  class="employee-form-main"
-  (ngSubmit)="onFormSubmitted(employeeForm.value)">
-  <input type="text" formControlName="name" placeholder="Name" />
-  <input type="number" formControlName="age" placeholder="Age" />
-  <input type="number" formControlName="salary" placeholder="Salary" />
-  <input type="submit" [disabled]="employeeForm.invalid" value="Submit" />
-</form>
+<div class="container-fluid">
+  <form
+    [formGroup]="employeeForm"
+    class="employee-form-main"
+    (ngSubmit)="onFormSubmitted(employeeForm.value)"
+  >
+    <input type="text" formControlName="name" placeholder="Name" />
+    <input type="number" formControlName="age" placeholder="Age" />
+    <input type="number" formControlName="salary" placeholder="Salary" />
+    <input
+      type="submit"
+      class="btn btn-success"
+      [disabled]="employeeForm.invalid"
+      value="Submit"
+    />
+  </form>
 
-<span *ngIf="employeeForm.valid">
-  Your new employee: {{ employeeForm.value.name }},
-  <span *ngIf="employeeForm.value.age">age: {{ employeeForm.value.age }}</span>
-  with salary {{ employeeForm.value.salary }}$ will be added to the system.
-</span>
+  <span *ngIf="employeeForm.valid">
+    Your new employee: {{ employeeForm.value.name }},
+    <span *ngIf="employeeForm.value.age"
+      >age: {{ employeeForm.value.age }}</span
+    >
+    with salary {{ employeeForm.value.salary }}$ will be added to the system.
+  </span>
+</div>
