--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<employee-list></employee-list>
-<app-employee-form></app-employee-form>
+<app-navbar></app-navbar>
+<router-outlet> </router-outlet>
+<app-footer></app-footer>
